Added shiftrequirements APIs
